[project]
name = "ndimagetools"
version = "0.1.0"
description = "A set of useful tools for working with multidimensional ndarrays."
readme = "README.md"
authors = [
    { name = "chatalympics", email = "chatalympics@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "scipy>=1.17.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
